--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
         MAX_DAYS: 400
         MIN_COMMITS_PER_DAY: 1
         MAX_COMMITS_PER_DAY: 5
+        INCLUDE_WEEKENDS: false 
 
 
 
